# serverless-boilerplate-python-main

./: .tool-versions  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: quality.yaml  release.yaml
config-scripts/: setup_wsl_linux.sh
serverless_boilerplate_python/: app.py
