[tool.poetry]
name = "serverless-boilerplate-python"
version = "0.1.0"
description = ""
authors = ["Felipe Augusto <augustto.felipe@hotmail.com>"]
readme = "README.md"
packages = [{include = "serverless_boilerplate_python"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
